Side nav (ref menu) - Fix missing space on medium screen

--- a/src/scss/9-grids/_grid-huge-navs.scss
+++ b/src/scss/9-grids/_grid-huge-navs.scss
@@ -66,7 +66,7 @@
         border-inline-start:solid pxToRem(1) hsl(var(--aw-color-border));
         background-color:hsl(var(--p-body-bg-color)); inline-size:var(--p-grid-huge-navs-side-nav-width-opened);
       }
-      &-list { margin-block-start:pxToRem(8); padding-block-end:pxToRem(16); }
+      &-list { margin-block-start:pxToRem(8); padding-block-end:pxToRem(24); }
       &.is-open {
         .#{$p}-references-menu-content {
           display:flex; /* show */
